8214495:  Change behavior of --license-file
Submitten-by: almatvee
Reviewed-by: herrick. kcr